# CG-HW3

./: BIN_file  CMakeLists.txt  LICENSE  README.md  main.cpp
